build/antlr4cpp_generated_src/SyGuSv21/SyGuSv21Parser.cpp

// Generated from /home/julian/coding/Sy2CPP/src/SyGuSv21.g4 by ANTLR 4.13.1


#include "SyGuSv21Visitor.h"

#include "SyGuSv21Parser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct SyGuSv21ParserStaticData final {
  SyGuSv21ParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  SyGuSv21ParserStaticData(const SyGuSv21ParserStaticData&) = delete;
  SyGuSv21ParserStaticData(SyGuSv21ParserStaticData&&) = delete;
  SyGuSv21ParserStaticData& operator=(const SyGuSv21ParserStaticData&) = delete;
  SyGuSv21ParserStaticData& operator=(SyGuSv21ParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag sygusv21ParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
SyGuSv21ParserStaticData *sygusv21ParserStaticData = nullptr;

void sygusv21ParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (sygusv21ParserStaticData != nullptr) {
    return;
  }
#else
  assert(sygusv21ParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<SyGuSv21ParserStaticData>(
    std::vector<std::string>{
      "problem", "solution", "literal", "numeral", "bvConst", "decimal", 
      "boolConst", "hexConst", "binConst", "stringConst", "identifier", 
      "index", "sort", "term", "bfTerm", "sortedVar", "varBinding", "feature", 
      "cmd", "assumeCmd", "checkSynthCmd", "constraintCmd", "declareVarCmd", 
      "setFeatureCmd", "synthFunCmd", "smtCmd", "declareDatatype", "declareDatatypes", 
      "declareSort", "defineFun", "defineSort", "setInfo", "setLogic", "setOption", 
      "sortDecl", "dtDecl", "dtConsDecl", "grammarDef", "groupedRuleList", 
      "gTerm", "symbol"
    },
    std::vector<std::string>{
      "", "'('", "'_ '", "')'", "'.'", "'exists'", "'forall'", "'let'", 
      "':'", "'assume'", "'check-synth'", "'constraint'", "'declare-var'", 
      "'set-feature'", "'synth-fun'", "'declare-datatype'", "'declare-datatypes'", 
      "'declare-sort'", "'define-fun'", "'define-sort'", "'set-info'", "'set-logic'", 
      "'set-option'", "'Constant'", "'Variable'", "", "", "", "", "", "", 
      "'true'", "'false'", "'fail'", "'grammars'", "'fwd-decls'", "'recursion'", 
      "'oracles'", "'weights'", "'\"\"'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "WS", "COMMENT", "NUMERAL", "HEXCONST", 
      "BINCONST", "BVCONST", "TRUE", "FALSE", "FAIL", "GRAMMARS_FEATURE", 
      "FWD_DECLS_FEATURE", "RECURSION_FEATURE", "ORACLES_FEATURE", "WEIGHTS_FEATURE", 
      "EMPTYSTRING", "STRINGCONST", "SYMBOL"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  sygusv21ParserStaticData = staticData.release();
}

}

SyGuSv21Parser::SyGuSv21Parser(TokenStream *input) : SyGuSv21Parser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

SyGuSv21Parser::SyGuSv21Parser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  SyGuSv21Parser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *sygusv21ParserStaticData->atn, sygusv21ParserStaticData->decisionToDFA, sygusv21ParserStaticData->sharedContextCache, options);
}

SyGuSv21Parser::~SyGuSv21Parser() {
  delete _interpreter;
}

const atn::ATN& SyGuSv21Parser::getATN() const {
  return *sygusv21ParserStaticData->atn;
}

std::string SyGuSv21Parser::getGrammarFileName() const {
  return "SyGuSv21.g4";
}

const std::vector<std::string>& SyGuSv21Parser::getRuleNames() const {
  return sygusv21ParserStaticData->ruleNames;
}

const dfa::Vocabulary& SyGuSv21Parser::getVocabulary() const {
  return sygusv21ParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView SyGuSv21Parser::getSerializedATN() const {
  return sygusv21ParserStaticData->serializedATN;
}


//----------------- ProblemContext ------------------------------------------------------------------

SyGuSv21Parser::ProblemContext::ProblemContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SyGuSv21Parser::ProblemContext::EOF() {
  return getToken(SyGuSv21Parser::EOF, 0);
}

std::vector<SyGuSv21Parser::CmdContext *> SyGuSv21Parser::ProblemContext::cmd() {
  return getRuleContexts<SyGuSv21Parser::CmdContext>();
}

SyGuSv21Parser::CmdContext* SyGuSv21Parser::ProblemContext::cmd(size_t i) {
  return getRuleContext<SyGuSv21Parser::CmdContext>(i);
}


size_t SyGuSv21Parser::ProblemContext::getRuleIndex() const {
  return SyGuSv21Parser::RuleProblem;
}


std::any SyGuSv21Parser::ProblemContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyGuSv21Visitor*>(visitor))
    return parserVisitor->visitProblem(this);
  else
    return visitor->visitChildren(this);
}

SyGuSv21Parser::ProblemContext* SyGuSv21Parser::problem() {
  ProblemContext *_localctx = _tracker.createInstance<ProblemContext>(_ctx, getState());
  enterRule(_localctx, 0, SyGuSv21Parser::RuleProblem);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(82);
      cmd();
      setState(85); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == SyGuSv21Parser::T__0);
    setState(87);
    match(SyGuSv21Parser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SolutionContext ------------------------------------------------------------------

SyGuSv21Parser::SolutionContext::SolutionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SyGuSv21Parser::SolutionContext::getRuleIndex() const {
  return SyGuSv21Parser::RuleSolution;
}

void SyGuSv21Parser::SolutionContext::copyFrom(SolutionContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- FailSolutionContext ------------------------------------------------------------------

tree::TerminalNode* SyGuSv21Parser::FailSolutionContext::FAIL() {
  return getToken(SyGuSv21Parser::FAIL, 0);
}

tree::TerminalNode* SyGuSv21Parser::FailSolutionContext::EOF() {
  return getToken(SyGuSv21Parser::EOF, 0);
}

SyGuSv21Parser::FailSolutionContext::FailSolutionContext(SolutionContext *ctx) { copyFrom(ctx); }


std::any SyGuSv21Parser::FailSolutionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyGuSv21Visitor*>(visitor))
    return parserVisitor->visitFailSolution(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SuccSolutionContext ------------------------------------------------------------------

tree::TerminalNode* SyGuSv21Parser::SuccSolutionContext::EOF() {
  return getToken(SyGuSv21Parser::EOF, 0);
}

std::vector<SyGuSv21Parser::DefineFunContext *> SyGuSv21Parser::SuccSolutionContext::defineFun() {
  return getRuleContexts<SyGuSv21Parser::DefineFunContext>();
}

SyGuSv21Parser::DefineFunContext* SyGuSv21Parser::SuccSolutionContext::defineFun(size_t i) {
  return getRuleContext<SyGuSv21Parser::DefineFunContext>(i);
}

SyGuSv21Parser::SuccSolutionContext::SuccSolutionContext(SolutionContext *ctx) { copyFrom(ctx); }


std::any SyGuSv21Parser::SuccSolutionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyGuSv21Visitor*>(visitor))
    return parserVisitor->visitSuccSolution(this);
  else
    return visitor->visitChildren(this);
}
SyGuSv21Parser::SolutionContext* SyGuSv21Parser::solution() {
  SolutionContext *_localctx = _tracker.createInstance<SolutionContext>(_ctx, getState());
  enterRule(_localctx, 2, SyGuSv21Parser::RuleSolution);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(98);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SyGuSv21Parser::FAIL: {
        _localctx = _tracker.createInstance<SyGuSv21Parser::FailSolutionContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(89);
        match(SyGuSv21Parser::FAIL);
        setState(90);
        match(SyGuSv21Parser::EOF);
        break;
      }

      case SyGuSv21Parser::T__0: {
        _localctx = _tracker.createInstance<SyGuSv21Parser::SuccSolutionContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(92); 
        _errHandler->sync(this);
        _la = _input->LA(1);
        do {
          setState(91);
          defineFun();
          setState(94); 
          _errHandler->sync(this);
          _la = _input->LA(1);
        } while (_la == SyGuSv21Parser::T__0);
        setState(96);
        match(SyGuSv21Parser::EOF);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LiteralContext ------------------------------------------------------------------

SyGuSv21Parser::LiteralContext::LiteralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SyGuSv21Parser::NumeralContext* SyGuSv21Parser::LiteralContext::numeral() {
  return getRuleContext<SyGuSv21Parser::NumeralContext>(0);
}

SyGuSv21Parser::DecimalContext* SyGuSv21Parser::LiteralContext::decimal() {
  return getRuleContext<SyGuSv21Parser::DecimalContext>(0);
}

SyGuSv21Parser::BoolConstContext* SyGuSv21Parser::LiteralContext::boolConst() {
  return getRuleContext<SyGuSv21Parser::BoolConstContext>(0);
}

SyGuSv21Parser::HexConstContext* SyGuSv21Parser::LiteralContext::hexConst() {
  return getRuleContext<SyGuSv21Parser::HexConstContext>(0);
}

SyGuSv21Parser::BinConstContext* SyGuSv21Parser::LiteralContext::binConst() {
  return getRuleContext<SyGuSv21Parser::BinConstContext>(0);
}

SyGuSv21Parser::StringConstContext* SyGuSv21Parser::LiteralContext::stringConst() {
  return getRuleContext<SyGuSv21Parser::StringConstContext>(0);
}

SyGuSv21Parser::BvConstContext* SyGuSv21Parser::LiteralContext::bvConst() {
  return getRuleContext<SyGuSv21Parser::BvConstContext>(0);
}


size_t SyGuSv21Parser::LiteralContext::getRuleIndex() const {
  return SyGuSv21Parser::RuleLiteral;
}


std::any SyGuSv21Parser::LiteralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyGuSv21Visitor*>(visitor))
    return parserVisitor->visitLiteral(this);
  else
    return visitor->visitChildren(this);
}

SyGuSv21Parser::LiteralContext* SyGuSv21Parser::literal() {
  LiteralContext *_localctx = _tracker.createInstance<LiteralContext>(_ctx, getState());
  enterRule(_localctx, 4, SyGuSv21Parser::RuleLiteral);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(107);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(100);
      numeral();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(101);
      decimal();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(102);
      boolConst();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(103);
      hexConst();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(104);
      binConst();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(105);
      stringConst();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(106);
      bvConst();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- NumeralContext ------------------------------------------------------------------

SyGuSv21Parser::NumeralContext::NumeralContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SyGuSv21Parser::NumeralContext::NUMERAL() {
  return getToken(SyGuSv21Parser::NUMERAL, 0);
}


size_t SyGuSv21Parser::NumeralContext::getRuleIndex() const {
  return SyGuSv21Parser::RuleNumeral;
}


std::any SyGuSv21Parser::NumeralContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyGuSv21Visitor*>(visitor))
    return parserVisitor->visitNumeral(this);
  else
    return visitor->visitChildren(this);
}

SyGuSv21Parser::NumeralContext* SyGuSv21Parser::numeral() {
  NumeralContext *_localctx = _tracker.createInstance<NumeralContext>(_ctx, getState());
  enterRule(_localctx, 6, SyGuSv21Parser::RuleNumeral);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(SyGuSv21Parser::NUMERAL);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BvConstContext ------------------------------------------------------------------

SyGuSv21Parser::BvConstContext::BvConstContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SyGuSv21Parser::BvConstContext::BVCONST() {
  return getToken(SyGuSv21Parser::BVCONST, 0);
}

tree::TerminalNode* SyGuSv21Parser::BvConstContext::NUMERAL() {
  return getToken(SyGuSv21Parser::NUMERAL, 0);
}


size_t SyGuSv21Parser::BvConstContext::getRuleIndex() const {
  return SyGuSv21Parser::RuleBvConst;
}


std::any SyGuSv21Parser::BvConstContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyGuSv21Visitor*>(visitor))
    return parserVisitor->visitBvConst(this);
  else
    return visitor->visitChildren(this);
}

SyGuSv21Parser::BvConstContext* SyGuSv21Parser::bvConst() {
  BvConstContext *_localctx = _tracker.createInstance<BvConstContext>(_ctx, getState());
  enterRule(_localctx, 8, SyGuSv21Parser::RuleBvConst);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    match(SyGuSv21Parser::T__0);
    setState(112);
    match(SyGuSv21Parser::T__1);
    setState(113);
    match(SyGuSv21Parser::BVCONST);
    setState(114);
    match(SyGuSv21Parser::NUMERAL);
    setState(115);
    match(SyGuSv21Parser::T__2);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DecimalContext ------------------------------------------------------------------

SyGuSv21Parser::DecimalContext::DecimalContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<SyGuSv21Parser::NumeralContext *> SyGuSv21Parser::DecimalContext::numeral() {
  return getRuleContexts<SyGuSv21Parser::NumeralContext>();
}

SyGuSv21Parser::NumeralContext* SyGuSv21Parser::DecimalContext::numeral(size_t i) {
  return getRuleContext<SyGuSv21Parser::NumeralContext>(i);
}


size_t SyGuSv21Parser::DecimalContext::getRuleIndex() const {
  return SyGuSv21Parser::RuleDecimal;
}


std::any SyGuSv21Parser::DecimalContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyGuSv21Visitor*>(visitor))
    return parserVisitor->visitDecimal(this);
  else
    return visitor->visitChildren(this);
}

SyGuSv21Parser::DecimalContext* SyGuSv21Parser::decimal() {
  DecimalContext *_localctx = _tracker.createInstance<DecimalContext>(_ctx, getState());
  enterRule(_localctx, 10, SyGuSv21Parser::RuleDecimal);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(117);
    numeral();
    setState(118);
    match(SyGuSv21Parser::T__3);
    setState(119);
    numeral();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BoolConstContext ------------------------------------------------------------------

SyGuSv21Parser::BoolConstContext::BoolConstContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SyGuSv21Parser::BoolConstContext::getRuleIndex() const {
  return SyGuSv21Parser::RuleBoolConst;
}

void SyGuSv21Parser::BoolConstContext::copyFrom(BoolConstContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- BoolConstTrueContext ------------------------------------------------------------------

tree::TerminalNode* SyGuSv21Parser::BoolConstTrueContext::TRUE() {
  return getToken(SyGuSv21Parser::TRUE, 0);
}

SyGuSv21Parser::BoolConstTrueContext::BoolConstTrueContext(BoolConstContext *ctx) { copyFrom(ctx); }


std::any SyGuSv21Parser::BoolConstTrueContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyGuSv21Visitor*>(visitor))
    return parserVisitor->visitBoolConstTrue(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BoolConstFalseContext ------------------------------------------------------------------

tree::TerminalNode* SyGuSv21Parser::BoolConstFalseContext::FALSE() {
  return getToken(SyGuSv21Parser::FALSE, 0);
}

SyGuSv21Parser::BoolConstFalseContext::BoolConstFalseContext(BoolConstContext *ctx) { copyFrom(ctx); }


std::any SyGuSv21Parser::BoolConstFalseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyGuSv21Visitor*>(visitor))
    return parserVisitor->visitBoolConstFalse(this);
  else
    return visitor->visitChildren(this);
}
SyGuSv21Parser::BoolConstContext* SyGuSv21Parser::boolConst() {
  BoolConstContext *_localctx = _tracker.createInstance<BoolConstContext>(_ctx, getState());
  enterRule(_localctx, 12, SyGuSv21Parser::RuleBoolConst);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(123);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SyGuSv21Parser::TRUE: {
        _localctx = _tracker.createInstance<SyGuSv21Parser::BoolConstTrueContext>(_localctx);
        enterOuterAlt(_localctx, 1);
        setState(121);
        match(SyGuSv21Parser::TRUE);
        break;
      }

      case SyGuSv21Parser::FALSE: {
        _localctx = _tracker.createInstance<SyGuSv21Parser::BoolConstFalseContext>(_localctx);
        enterOuterAlt(_localctx, 2);
        setState(122);
        match(SyGuSv21Parser::FALSE);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- HexConstContext ------------------------------------------------------------------

SyGuSv21Parser::HexConstContext::HexConstContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SyGuSv21Parser::HexConstContext::HEXCONST() {
  return getToken(SyGuSv21Parser::HEXCONST, 0);
}


size_t SyGuSv21Parser::HexConstContext::getRuleIndex() const {
  return SyGuSv21Parser::RuleHexConst;
}


std::any SyGuSv21Parser::HexConstContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyGuSv21Visitor*>(visitor))
    return parserVisitor->visitHexConst(this);
  else
    return visitor->visitChildren(this);
}

SyGuSv21Parser::HexConstContext* SyGuSv21Parser::hexConst() {
  HexConstContext *_localctx = _tracker.createInstance<HexConstContext>(_ctx, getState());
  enterRule(_localctx, 14, SyGuSv21Parser::RuleHexConst);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(125);
    match(SyGuSv21Parser::HEXCONST);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BinConstContext ------------------------------------------------------------------

SyGuSv21Parser::BinConstContext::BinConstContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SyGuSv21Parser::BinConstContext::BINCONST() {
  return getToken(SyGuSv21Parser::BINCONST, 0);
}


size_t SyGuSv21Parser::BinConstContext::getRuleIndex() const {
  return SyGuSv21Parser::RuleBinConst;
}


std::any SyGuSv21Parser::BinConstContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyGuSv21Visitor*>(visitor))
    return parserVisitor->visitBinConst(this);
  else
    return visitor->visitChildren(this);
}

SyGuSv21Parser::BinConstContext* SyGuSv21Parser::binConst() {
  BinConstContext *_localctx = _tracker.createInstance<BinConstContext>(_ctx, getState());
  enterRule(_localctx, 16, SyGuSv21Parser::RuleBinConst);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(127);
    match(SyGuSv21Parser::BINCONST);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StringConstContext ------------------------------------------------------------------

SyGuSv21Parser::StringConstContext::StringConstContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SyGuSv21Parser::StringConstContext::STRINGCONST() {
  return getToken(SyGuSv21Parser::STRINGCONST, 0);
}

tree::TerminalNode* SyGuSv21Parser::StringConstContext::EMPTYSTRING() {
  return getToken(SyGuSv21Parser::EMPTYSTRING, 0);
}


size_t SyGuSv21Parser::StringConstContext::getRuleIndex() const {
  return SyGuSv21Parser::RuleStringConst;
}


std::any SyGuSv21Parser::StringConstContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SyGuSv21Visitor*>(visitor))
    return parserVisitor->visitStringConst(this);
  else
    return visitor->visitChildren(this);
}

SyGuSv21Parser::StringConstContext* SyGuSv21Parser::stringConst() {
  StringConstContext *_localctx = _tracker.createInstance<StringConstContext>(_ctx, getState());
  enterRule(_localctx, 18, SyGuSv21Parser::RuleStringConst);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(129);
    _la = _input->LA(1);
    if (!(_la == SyGuSv21Parser::EMPTYSTRING

    || _la == SyGuSv21Parser::STRINGCONST)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IdentifierContext ------------------------------------------------------------------

SyGuSv21Parser::IdentifierContext::IdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t SyGuSv21Parser::IdentifierContext::getRuleIndex() const {
  return SyGuSv21Parser::RuleIdentifier;
}

void SyGuSv21Parser::IdentifierContext::copyFrom(IdentifierContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- SimpleIdentifierContext ------------------------------------------------------------------
